--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./src/server/bin/www"
+    "start": "node ./src/server/bin/www",
+    "test": "mocha --recursive",
+    "cov": "istanbul cover _mocha -- --recursive -R spec",
+    "send-coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -18,6 +21,7 @@
     "browser-sync": "2.9.6",
     "chai": "^3.4.1",
     "chai-http": "^1.0.0",
+    "coveralls": "^2.11.4",
     "gulp": "^3.9.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
@@ -26,8 +30,10 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-nodemon": "^2.0.4",
     "gulp-uglify": "^1.4.2",
+    "istanbul": "^0.4.0",
     "jshint-stylish": "^2.0.1",
     "mocha": "^2.3.3",
+    "mocha-lcov-reporter": "^1.0.0",
     "run-sequence": "^1.1.4"
   }
 }
