--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ node_js:
 - '0.11'
 before_script:
 - npm install -g mocha
-script: mocha
+- npm install -g coveralls
+script: npm run cov
+after_script:
+- npm run send-coverage
 deploy:
   provider: heroku
   api_key:
