--- a/src/server/config.json
+++ b/src/server/config.json
@@ -7,11 +7,8 @@
     "dialect": "postgres"
   },
   "test": {
-    "username": "Herkamina",
-    "password": null,
-    "database": "guest_app_test",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "sqlite",
+    "storage": ":memory:"
   },
   "production": {
     "use_env_variable": "DATABASE_URL"
