--- a/src/server/config.json
+++ b/src/server/config.json
@@ -11,6 +11,9 @@
     "storage": ":memory:"
   },
   "production": {
+    "database": "guest_production",
+    "host": "process.env.DATABASE_URL",
+    "dialect": "postgres",
     "use_env_variable": "DATABASE_URL"
   }
 }
